atualização do projeto

--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -29,13 +29,21 @@
   }
 
   #login > #imagem {
-    float: left;
+    float: right;
     width: 50%;
     height: 100%;
   }
 
-  #login > #formulário {
-    float: right;
+  #login > #formulario {
+    float: left;
     width: 50%;
+  }
+
+  #formulario > h1 {
+    font-size: 2em;
+  }
+
+  #formulario > p {
+    font-size: 1.2em;
   }
 }
