--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,3 +54,20 @@ main {
   display: block;
   padding: 10px;
 }
+
+#formulario > h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#formulario > p {
+  font-size: 0.8em;
+}
+
+/* .label-senha {
+  font-size: 15px;
+}
+
+.label-login {
+  font-size: 15px;
+} */
