--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) { /* CONFIGURAÇÃO PARA TABLET */
   body {
     background-image: linear-gradient(to top, #49a09d, #5f2c82);
   }
   
   #login {
     width: 80vw;
+    height: 280px;
   }
   #login > #imagem {
     float: left;
@@ -19,13 +20,14 @@
   }
 } 
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /* CONFIGURAÇÃO PARA DESKTOP */
   body {
     background-image: linear-gradient(to top, #49a09d, #5f2c82);
   }
 
   #login {
     width: 950px;
+    height: 350px;
   }
 
   #login > #imagem {
@@ -44,6 +46,7 @@
   }
 
   #formulario > p {
-    font-size: 1.2em;
+    font-size: 1em;
+    margin: 20px 0px;
   }
 }
